crates/dsrs-macros/tests/ui/render_non_literal.rs
use dsrs_macros::Signature;

const TEMPLATE: &str = "{{ this }}";

#[derive(Signature)]
struct RenderNonLiteral {
    #[input]
    #[render(jinja = TEMPLATE)]
    context: String,

    #[output]
    answer: String,
}

fn main() {}
